mongo-statefulset-withpersitentclaim.yml
---
kind: Service
apiVersion: v1
metadata:
  name: rocketchat-mongo-service
spec:
  selector:
    app: rocketchat-mongo
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rocketchat-mongo
spec:
  selector:
    matchLabels:
      app: rocketchat-mongo
  serviceName: "rocketchat-mongo"
  replicas: 1
  template:
    metadata:
      labels:
        app: rocketchat-mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb
        image: mongo:3.2
        ports:
        - containerPort: 27017
          name: web
        command: ["mongod"]
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
      volumes:
       - name: mongo-persistent-storage
         persistentVolumeClaim:
          claimName: mongo-persistent-storage
